Commented out some not-ready-for-primetime stuff for PWAs.

--- a/bales-src/root/fronkensteen_template.html
+++ b/bales-src/root/fronkensteen_template.html
@@ -97,7 +97,8 @@ $$$FILESYSTEM$$$
   let scheme_interpreter = null;
   console.log("Loaded.")
   function promptForHomeScreenInstall(){
-    alert("Add to Home Screen.")
+    // Functionality for later.
+    //alert("Add to Home Screen.")
   }
   function launchSystem(){
     document.getElementById("fronkensteen-wrapper").innerHTML = ""
