Added <noscript> handler.

--- a/bales-src/root/fronkensteen_template.html
+++ b/bales-src/root/fronkensteen_template.html
@@ -9,6 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Fronkensteen">
+    <noscript>Sorry, Fronkensteen will not work without JavaScript enabled.</noscript>
     <title>Fronkensteen</title>
     <style>
     body {background-color: #fffff8}
