--- a/bales-src/root/fronkensteen_template.html
+++ b/bales-src/root/fronkensteen_template.html
@@ -120,7 +120,9 @@ $$$FILESYSTEM$$$
     const urlParams = new URLSearchParams(window.location.search);
     const remote = urlParams.get('remote');
     if(remote !== null){
-      Fronkensteen.remoteREPL.connect(true,null);
+      if(Fronkensteen.remoteREPL !== undefined){
+        Fronkensteen.remoteREPL.connect(true,null);
+      }
     }
   }
   // System launcher.
